--- a/webPage/pages/index.html
+++ b/webPage/pages/index.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<title>Grandin I Fast build Admin dashboard for any platform</title>
-	<meta name="description" content="Grandin is a Dashboard & Admin Site Responsive Template by hencework." />
-	<meta name="keywords" content="admin, admin dashboard, admin template, cms, crm, Grandin Admin, Grandinadmin, premium admin templates, responsive admin, sass, panel, software, ui, visualization, web app, application" />
-	<meta name="author" content="hencework"/>
+	<title>MAD|主页</title>
 	
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../img/favicon.png">
@@ -104,18 +101,23 @@
 		<!-- Left Sidebar Menu -->
 		<div class="fixed-sidebar-left">
 			<ul class="nav navbar-nav side-nav nicescroll-bar">
+				<li class="navigation-header">
+					<span>主页</span>
+					<i class="zmdi zmdi-more"></i>
+				</li>
 				<li>
 					<a class="active" href="index.html"><div class="pull-left"><i class="zmdi zmdi-star-circle mr-20"></i><span class="right-nav-text">主页</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
+				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
 					<span>统计</span>
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
-					<a href="abstract.html"><div class="pull-left"><i class="zmdi zmdi-chart mr-20"></i><span class="right-nav-text">概要</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a href="abstract.html"><div class="pull-left"><i class="zmdi zmdi-chart mr-20"></i><span class="right-nav-text">概要统计</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">详细</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
@@ -134,6 +136,7 @@
 				<li>
 					<a href="download.html"><div class="pull-left"><i class="zmdi zmdi-download mr-20"></i><span class="right-nav-text">下载专区</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
+				<li><hr class="light-grey-hr mb-10"/></li>
 			</ul>
 		</div>
 		<!-- /Left Sidebar Menu -->
@@ -432,7 +435,7 @@
 			<footer class="footer container-fluid pl-30 pr-30">
 				<div class="row">
 					<div class="col-sm-12">
-						<p>2018 &copy; Grandin. Pampered by Hencework</p>
+						<p>2018 &copy; C&D</p>
 					</div>
 				</div>
 			</footer>
