--- a/webPage/pages/about.html
+++ b/webPage/pages/about.html
@@ -150,35 +150,22 @@
             <div class="container-fluid pt-25">
 			<!-- Row -->
 				<div class="row">
-					<div class="col-md-6">
-						<div class="panel panel-default card-view">
+					<div class="col-md-9">
+						<div class="panel panel-default border-panel card-view">
 							<div class="panel-heading">
 								<div class="pull-left">
-									<h6 class="panel-title txt-dark">Bootstrap carousel without caption</h6>
+									<h6 class="panel-title txt-dark">border panel</h6>
 								</div>
 								<div class="clearfix"></div>
 							</div>
-							<div class="panel-wrapper collapse in">
+							<div  class="panel-wrapper collapse in">
 								<div  class="panel-body">
-								<!-- START carousel-->
-									<div id="carousel-example-captions-1" data-ride="carousel" class="carousel slide">
-										<ol class="carousel-indicators">
-										   <li data-target="#carousel-example-captions-1" data-slide-to="0" class="active"></li>
-										   <li data-target="#carousel-example-captions-1" data-slide-to="1"></li>
-										   <li data-target="#carousel-example-captions-1" data-slide-to="2"></li>
-										</ol>
-										<div role="listbox" class="carousel-inner">
-										   <div class="item active"> <img src="../img/big/img4.jpg" alt="First slide image"> </div>
-										   <div class="item"> <img src="../img/big/img5.jpg" alt="Second slide image"> </div>
-										   <div class="item"> <img src="../img/big/img6.jpg" alt="Third slide image"> </div>
-										</div>
-									</div>
-								<!-- END carousel-->
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-3">
 						<div class="panel panel-default card-view">
 							<div class="panel-heading">
 								<div class="pull-left">
@@ -189,7 +176,7 @@
 							<div class="panel-wrapper collapse in">
 								<div  class="panel-body">
 									<!-- START carousel-->
-									<div id="carousel-example-captions" data-ride="carousel" class="carousel slide mt-40">
+									<div id="carousel-example-captions" data-ride="carousel" class="carousel slide">
 										<ol class="carousel-indicators">
 										   <li data-target="#carousel-example-captions" data-slide-to="0" class="active"></li>
 										   <li data-target="#carousel-example-captions" data-slide-to="1"></li>
@@ -198,28 +185,20 @@
 										</ol>
 										<div role="listbox" class="carousel-inner">
 										   <div class="item active">
-											  <img src="../img/sliderImg1.jpg" alt="First slide image">
-											  <div class="carousel-caption">
-												<h2><font color="white">王林</font></h2>
-											  </div>
+											   <h6>王林</h6>
+											   <img src="../img/sliderImg1.jpg" alt="First slide image">
 										   </div>
 										   <div class="item">
-											  <img src="../img/sliderImg2.jpg" alt="Second slide image">
-											  <div class="carousel-caption">
-												 <h2><font color="white">肖佳伟</font></h2>
-											  </div>
+											   <h6>肖佳伟</h6>
+											   <img src="../img/sliderImg2.jpg" alt="Second slide image">
 										   </div>
 										   <div class="item">
-											  <img src="../img/sliderImg3.jpg" alt="Third slide image">
-											  <div class="carousel-caption">
-												<h2><font color="white">刘运卓</font></h2>
-											  </div>
+											   <h6>刘运卓</h6>
+											   <img src="../img/sliderImg3.jpg" alt="Third slide image">
 										   </div>
 										   <div class="item">
-											  <img src="../img/sliderImg4.jpg" alt="Third slide image">
-											  <div class="carousel-caption">
-												<h2><font color="white">尹凯涛</font></h2>
-											  </div>
+											   <h6>尹凯涛</h6>
+											   <img src="../img/sliderImg4.jpg" alt="Third slide image">
 										   </div>
 										</div>
 										<a href="#carousel-example-captions" role="button" data-slide="prev" class="left carousel-control"> <span aria-hidden="true" class="fa fa-angle-left"></span> <span class="sr-only">Previous</span> </a> <a href="#carousel-example-captions" role="button" data-slide="next" class="right carousel-control"> <span aria-hidden="true" class="fa fa-angle-right"></span> <span class="sr-only">Next</span> </a>
