--- a/webPage/pages/download.html
+++ b/webPage/pages/download.html
@@ -160,7 +160,7 @@
                                     <p class="text-muted">点击下方按钮下载<code>PDF</code>格式论文。</p>
                                     <div class="row mt-25">
                                         <div class="col-sm-12 col-xs-12 mt-15">
-                                            <a href="../../testFiles/基于流量的自反馈恶意软件监测系统.pdf"><button class="btn btn-success btn-rounded btn-block btn-anim"><i class="fa fa-download"></i><span class="btn-text">下载</span></button></a>
+                                            <a href="../testFiles/基于流量的自反馈恶意软件监测系统.pdf"><button class="btn btn-success btn-rounded btn-block btn-anim"><i class="fa fa-download"></i><span class="btn-text">下载</span></button></a>
                                         </div>
                                     </div>
                                 </div>
