--- a/webPage/pages/about.html
+++ b/webPage/pages/about.html
@@ -148,13 +148,31 @@
         <!-- Main Content -->
 		<div class="page-wrapper">
             <div class="container-fluid pt-25">
-			<!-- Row -->
+
+				<!-- Title -->
+				<div class="row heading-bg">
+					<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+					  <h5 class="txt-dark">关于我们</h5>
+					</div>
+					<!-- Breadcrumb -->
+					<div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+					  <ol class="breadcrumb">
+						<li><a href="index.html">主页</a></li>
+						<li><a href="#"><span>关于</span></a></li>
+						<li class="active"><span>关于我们</span></li>
+					  </ol>
+					</div>
+					<!-- /Breadcrumb -->
+				</div>
+				<!-- /Title -->
+
+				<!-- Row -->
 				<div class="row">
-					<div class="col-md-9">
+					<div class="col-md-8">
 						<div class="panel panel-default border-panel card-view">
 							<div class="panel-heading">
 								<div class="pull-left">
-									<h6 class="panel-title txt-dark">border panel</h6>
+									<h6 class="panel-title txt-dark">C and D</h6>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -165,11 +183,11 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-4">
 						<div class="panel panel-default card-view">
 							<div class="panel-heading">
 								<div class="pull-left">
-									<h6 class="panel-title txt-dark">小组成员</h6>
+									<h6 class="panel-title txt-dark text-center">小组成员</h6>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -185,19 +203,19 @@
 										</ol>
 										<div role="listbox" class="carousel-inner">
 										   <div class="item active">
-											   <h6>王林</h6>
+											   <h6 class="text-center">王林</h6>
 											   <img src="../img/sliderImg1.jpg" alt="First slide image">
 										   </div>
 										   <div class="item">
-											   <h6>肖佳伟</h6>
+											   <h6 class="text-center">肖佳伟</h6>
 											   <img src="../img/sliderImg2.jpg" alt="Second slide image">
 										   </div>
 										   <div class="item">
-											   <h6>刘运卓</h6>
+											   <h6 class="text-center">刘运卓</h6>
 											   <img src="../img/sliderImg3.jpg" alt="Third slide image">
 										   </div>
 										   <div class="item">
-											   <h6>尹凯涛</h6>
+											   <h6 class="text-center">尹凯涛</h6>
 											   <img src="../img/sliderImg4.jpg" alt="Third slide image">
 										   </div>
 										</div>
