--- a/webPage/pages/download.html
+++ b/webPage/pages/download.html
@@ -106,7 +106,7 @@
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
-					<a class="active" href="index.html"><div class="pull-left"><i class="zmdi zmdi-star-circle mr-20"></i><span class="right-nav-text">主页</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a href="index.html"><div class="pull-left"><i class="zmdi zmdi-star-circle mr-20"></i><span class="right-nav-text">主页</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
@@ -134,7 +134,7 @@
 					<a href="about.html"><div class="pull-left"><i class="zmdi zmdi-accounts mr-20"></i><span class="right-nav-text">关于我们</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a href="download.html"><div class="pull-left"><i class="zmdi zmdi-download mr-20"></i><span class="right-nav-text">下载专区</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a class="active" href="download.html"><div class="pull-left"><i class="zmdi zmdi-download mr-20"></i><span class="right-nav-text">下载专区</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 			</ul>
