--- a/webPage/pages/download.html
+++ b/webPage/pages/download.html
@@ -254,7 +254,7 @@
 
 	<!-- Data table JavaScript -->
 	<script type="text/javascript">
-		$.getJSON ("../testFiles/index.json", function (data) {
+		$.getJSON ("/report/index.json", function (data) {
 		    $.each(data, function (i, item) {
 				$.getJSON(item, function (data) {
 					$.each(data, function (i, item) {
