--- a/webPage/pages/about.html
+++ b/webPage/pages/about.html
@@ -135,7 +135,7 @@
 					<a target="_blank" href="intro.html"><div class="pull-left"><i class="zmdi zmdi-puzzle-piece mr-20"></i><span class="right-nav-text">系统介绍</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a class="active" href="about.html"><div class="pull-left"><i class="zmdi zmdi-accounts mr-20"></i><span class="right-nav-text">关于我们</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" class="active" href="about.html"><div class="pull-left"><i class="zmdi zmdi-accounts mr-20"></i><span class="right-nav-text">关于我们</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
 					<a target="_blank" href="download.html"><div class="pull-left"><i class="zmdi zmdi-download mr-20"></i><span class="right-nav-text">下载专区</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
