--- a/webPage/pages/usage.html
+++ b/webPage/pages/usage.html
@@ -34,7 +34,7 @@
 			<div class="mobile-only-brand pull-left">
 				<div class="nav-header pull-left">
 					<div class="logo-wrap">
-						<a href="index.html">
+						<a target="_blank" href="index.html">
 							<img class="brand-img" src="../img/logo.png" alt="brand"/>
 							<span class="brand-text">MAD</span>
 						</a>
@@ -53,37 +53,37 @@
 								<div class="app-nicescroll-bar">
 									<ul class="app-icon-wrap pa-10">
 										<li>
-											<a href="abstract.html" class="connection-item">
+											<a target="_blank" href="abstract.html" class="connection-item">
 											<i class="zmdi zmdi-chart txt-info"></i>
 											<span class="block">概要统计</span>
 											</a>
 										</li>
 										<li>
-											<a href="detail.html" class="connection-item">
+											<a target="_blank" href="detail.html" class="connection-item">
 											<i class="zmdi zmdi-view-list-alt txt-success"></i>
 											<span class="block">详细信息</span>
 											</a>
 										</li>
 										<li>
-											<a href="usage.html" class="connection-item">
+											<a target="_blank" href="usage.html" class="connection-item">
 											<i class="zmdi zmdi-pin-help txt-primary"></i>
 											<span class="block">使用方法</span>
 											</a>
 										</li>
 										<li>
-											<a href="intro.html" class="connection-item">
+											<a target="_blank" href="intro.html" class="connection-item">
 											<i class="zmdi zmdi-puzzle-piece txt-danger"></i>
 											<span class="block">系统介绍</span>
 											</a>
 										</li>
 										<li>
-											<a href="about.html" class="connection-item">
+											<a target="_blank" href="about.html" class="connection-item">
 											<i class="zmdi zmdi-accounts txt-warning"></i>
 											<span class="block">关于我们</span>
 											</a>
 										</li>
 										<li>
-											<a href="download.html" class="connection-item">
+											<a target="_blank" href="download.html" class="connection-item">
 											<i class="zmdi zmdi-download"></i>
 											<span class="block">下载专区</span>
 											</a>
@@ -106,7 +106,7 @@
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
-					<a href="index.html"><div class="pull-left"><i class="zmdi zmdi-star-circle mr-20"></i><span class="right-nav-text">主页</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="index.html"><div class="pull-left"><i class="zmdi zmdi-star-circle mr-20"></i><span class="right-nav-text">主页</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
@@ -114,10 +114,10 @@
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
-					<a href="abstract.html"><div class="pull-left"><i class="zmdi zmdi-chart mr-20"></i><span class="right-nav-text">概要统计</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="abstract.html"><div class="pull-left"><i class="zmdi zmdi-chart mr-20"></i><span class="right-nav-text">概要统计</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
@@ -125,16 +125,16 @@
 					<i class="zmdi zmdi-more"></i>
 				</li>
 				<li>
-					<a class="active" href="usage.html"><div class="pull-left"><i class="zmdi zmdi-pin-help mr-20"></i><span class="right-nav-text">使用方法</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" class="active" href="usage.html"><div class="pull-left"><i class="zmdi zmdi-pin-help mr-20"></i><span class="right-nav-text">使用方法</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a href="intro.html"><div class="pull-left"><i class="zmdi zmdi-puzzle-piece mr-20"></i><span class="right-nav-text">系统介绍</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="intro.html"><div class="pull-left"><i class="zmdi zmdi-puzzle-piece mr-20"></i><span class="right-nav-text">系统介绍</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a href="about.html"><div class="pull-left"><i class="zmdi zmdi-accounts mr-20"></i><span class="right-nav-text">关于我们</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="about.html"><div class="pull-left"><i class="zmdi zmdi-accounts mr-20"></i><span class="right-nav-text">关于我们</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a href="download.html"><div class="pull-left"><i class="zmdi zmdi-download mr-20"></i><span class="right-nav-text">下载专区</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" href="download.html"><div class="pull-left"><i class="zmdi zmdi-download mr-20"></i><span class="right-nav-text">下载专区</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 			</ul>
