--- a/webPage/pages/detail.html
+++ b/webPage/pages/detail.html
@@ -147,7 +147,7 @@
 					<a target="_blank" href="abstract.html"><div class="pull-left"><i class="zmdi zmdi-chart mr-20"></i><span class="right-nav-text">概要统计</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li>
-					<a class="active" href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
+					<a target="_blank" class="active" href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
 				</li>
 				<li><hr class="light-grey-hr mb-10"/></li>
 				<li class="navigation-header">
