--- a/webPage/pages/intro.html
+++ b/webPage/pages/intro.html
@@ -144,6 +144,132 @@
         <!-- Main Content -->
 		<div class="page-wrapper">
             <div class="container-fluid pt-25">
+				<!-- Title -->
+				<div class="row heading-bg">
+					<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+					  <h5 class="txt-dark">系统介绍</h5>
+					</div>
+					<!-- Breadcrumb -->
+					<div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+					  <ol class="breadcrumb">
+						<li><a href="index.html">主页</a></li>
+						<li><a href="#"><span>关于</span></a></li>
+						<li class="active"><span>系统介绍</span></li>
+					  </ol>
+					</div>
+					<!-- /Breadcrumb -->
+				</div>
+				<!-- /Title -->
+				<!-- Row -->
+				<div class="row">
+				    <div class="col-lg-12">
+						<div class="panel panel-default card-view">
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-dark">系统整体架构图</h6>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div class="panel-wrapper collapse in">
+								<div  class="panel-body">
+									<div class="">
+										<div id="owl_demo_1" class="owl-carousel owl-theme">
+										    <div class="item">
+												<img src="../img/System.png" alt="Owl Image"/>
+											</div>
+								</div>
+							</div>
+						</div>
+					 </div>
+				</div>
+				<!-- /Row -->
+				<!-- WebGraphic -->
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<div class="panel panel-success border-panel card-view">
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-light">浏览器流量清洗</h6>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div  class="panel-wrapper collapse in">
+								<div  class="panel-body">
+									<p style="text-indent:2em;">经过网关的HTTP流量当中包含大量来自浏览器的部分，这系列流量与用户的直接交互相关，比如某个页面的加载，某个图片的点击请求等，是由用户亲自所操作产生，可视为良性流量。而那些由后台软件所发出的HTTP请求不包含用户的操作，是软件自行进行的一些比如更新查询、与服务器通信之类的行为，这也是恶意软件使用HTTP协议进行通信的行为方式，所以恶意软件的检测识别依赖于对后台软件产生的HTTP请求的处理。因此，为保证系统检测的实时性，我们选择使用WebGraphic网络图算法,对数据中的浏览器HTTP流量进行清洗，减小处理的数据量，使后续步骤集中于对后台软件的HTTP流量进行分析。</p>
+								</div>
+								<div  class="panel-body">
+									<p style="text-indent:2em;">同时，因为浏览器HTTP请求和后台软件HTTP请求具有明显不同的特征（如浏览器HTTP请求的格式和内容变化频繁，而后台软件HTTP请求的格式相对稳定，具有固定的模式，其HTTP请求头具有固定的结构，HTTP请求的大小固定，或者具有相同的数据内容等），该处理也使得后续步骤中使用深度学习生成的检测模型更具有针对性。</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+						<div class="panel panel-default border-panel card-view">
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-dark">WebGraphic请求图算法</h6>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div  class="panel-wrapper collapse in">
+								<div  class="panel-body">
+									<p style="text-indent:2em;">浏览器在用户的交互下产生HTTP请求，这些由用户操作产生的一系列请求一般来说具有明显的相关性。比如用户在浏览网页时，从一个站点点击链接跳转到另一个站点，或者在同一个主域名下不同页面间浏览，这些请求都存在明显的关系。而后台软件所产生的每个HTTP请求一般具有各自明确目标和任务，并不相互关联。根据这个特性，我们将捕获到的每个HTTP请求视为一个节点，依次按数据包的时间戳读入请求，将其置于设定为一定大小的时间窗之中。然后通过预定的规则不断在时间窗中发现并连接具有联系的节点，构建 WebGraphic 网络请求节点图。在所有请求读入并处理完毕后，成功建立起联系的节点即为来自浏览器类型软件的流量，而孤独结点则为来自后台软件的流量。</p>
+								</div>
+								<div  class="panel-body">
+									<p style="text-indent:2em;">在处理过程当中，我们使用以下规则来识别HTTP请求的头节点并连结相关的子节点：</p>
+								</div>
+								<div  class="panel-body pl-15">
+									<ol>
+									    <li class="mb-10">根据HTTP请求的Referer字段在设定好的时间窗中找出前向节点，将其设置为头节点后，将所有指向相同Referer的子节点连结在一起；</li>
+									    <li class="mb-10">根据HTTP请求的URL包含的关键字，寻找对于常见的可视化页面相关资源的请求，将其设置为头节点。目标请求的寻找采用关键字匹配的方法，所设置的关键字包括：html，php，htm，css，json，js，asp，aspx，jsp，shtml，stm，shtm；</li>
+									    <li class="mb-10">对于包含Referer字段但在当前时间窗内找不到前向节点的HTTP请求，将其连接到与其Referer字段指向的头节点的域名相似的节点组当中。判断域名相似的方法为使用Levenshtein算法计算主域名的相似度，若相似度大于字段长度的2/3则判断为 True（注：对于给定的两个字符串str1和str2，Levenshtein算法能够计算str1修改为str2需要的最少字符变动次数）；</li>
+										<li>若HTTP请求的Host字段与已经存在的某个节点组中的域名相同，则将该HTTP请求加入该组。</li>
+									</ol>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+						<div class="panel panel-default card-view panel-refresh">
+							<div class="refresh-container">
+								<div class="la-anim-1"></div>
+							</div>
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-dark">WebGraphic图示</h6>
+								</div>
+								<div class="pull-right">
+								</div>
+								<div class="clearfix"></div>
+							</div>
+
+							<div class="panel-wrapper collapse in">
+								<div class="panel-body">
+									<div id="e_chart_1" class="" style="height:242px;"></div>
+									<div class="label-chatrs mt-15">
+										<div class="mb-5">
+											<span class="clabels inline-block bg-blue mr-5"></span>
+											<span class="clabels-text font-12 inline-block txt-dark capitalize-font">用户操作请求</span>
+										</div>
+										<div class="mb-5">
+											<span class="clabels inline-block bg-light-blue mr-5"></span>
+											<span class="clabels-text font-12 inline-block txt-dark capitalize-font">关联请求</span>
+										</div>
+										<div class="">
+											<span class="clabels inline-block bg-red mr-5"></span>
+											<span class="clabels-text font-12 inline-block txt-dark capitalize-font">孤立请求</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<!-- /WebGraphic -->
 
 			</div>
 
@@ -203,6 +329,9 @@
 
 	<!-- Owl JavaScript -->
 	<script src="../vendors/bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
+
+	<!-- Owl Init JavaScript -->
+	<script src="dist/js/owl-data.js"></script>
 
 	<!-- Toast JavaScript -->
 	<script src="../vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.js"></script>
